syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "model/system/user.proto";

package api.v1;
option go_package = "github.com/smartmemos/memos/internal/proto/api/v1";

service SystemService {
  // CreateUser creates a new user.
  rpc CreateUser(CreateUserRequest) returns (system.User) {
    option (google.api.http) = {
      post: "/api/v1/system/users"
    //   body: "user"
    };
    option (google.api.method_signature) = "name,username,password";
  }

}

message CreateUserRequest {
  string name = 1;
  string username = 2;
  string email = 3;
  string nickname = 4;
  string avatar_url = 5;
  string description = 6;
  string password = 7 [(google.api.field_behavior) = INPUT_ONLY];
}