syntax = "proto3";

import "google/protobuf/timestamp.proto";

package model;
option go_package = "github.com/smartmemos/memos/internal/proto/model";


message UserSession {
    // The resource name of the session.
    // Format: users/{user}/sessions/{session}
    string name = 1;
  
    // The session ID.
    string session_id = 2;
  
    // The timestamp when the session was created.
    google.protobuf.Timestamp create_time = 3;
  
    // The timestamp when the session was last accessed.
    // Used for sliding expiration calculation (last_accessed_time + 2 weeks).
    google.protobuf.Timestamp last_accessed_time = 4;
  
    // Client information associated with this session.
    ClientInfo client_info = 5;
  
    message ClientInfo {
      // User agent string of the client.
      string user_agent = 1;
  
      // IP address of the client.
      string ip_address = 2;
  
      // Optional. Device type (e.g., "mobile", "desktop", "tablet").
      string device_type = 3;
  
      // Optional. Operating system (e.g., "iOS 17.0", "Windows 11").
      string os = 4;
  
      // Optional. Browser name and version (e.g., "Chrome 119.0").
      string browser = 5;
    }
  }